<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="56dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="18dp"
                    android:src="@drawable/ic_launcher" />
                <!--           服务端-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_sign_in_host"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardview_light_background"
                        android:hint="@string/api_host"
                        android:text="http://192.168.20.44:5000/"
                        android:inputType="textEmailAddress"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--邮箱-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_sign_in_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardview_light_background"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--密码-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_sign_in_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cardview_light_background"
                        android:hint="@string/pawwsord"
                        android:inputType="textPassword"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/action_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_30"
                    android:layout_marginBottom="150dp"
                    android:gravity="center"
                    android:text="@string/login_text"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_16"
                    app:backgroundTint="@color/color_theme"
                    app:cornerRadius="25dp"></com.google.android.material.button.MaterialButton>

                <!--<android.support.v7.widget.AppCompatTextView-->
                <!--android:id="@+id/tv_link_sign_up"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginBottom="24dp"-->
                <!--android:gravity="center"-->
                <!--android:text="还没有账户？现在注册吧"-->
                <!--android:textSize="16sp"-->
                <!--tools:ignore="HardcodedText" />-->

                <!--<com.joanzapata.iconify.widget.IconTextView-->
                <!--android:id="@+id/icon_sign_in_wechat"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="100dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:gravity="center"-->
                <!--android:text="{fa-adjust}"-->
                <!--android:textColor="#04b00f"-->
                <!--android:textSize="40sp" />-->

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>