<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_attach"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@color/colorPrimary"
            app:layout_collapseMode="pin">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon_attach_close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="20dp"
                    android:text="{fa-times}"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:text="@string/fun_attach"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical" />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.Toolbar>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/attach_rg_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                        <RadioButton
                            android:id="@+id/attach_rb_0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/attach_type_0" />

                        <RadioButton
                            android:id="@+id/attach_rb_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/attach_type_1" />
                    </RadioGroup>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:background="@color/cardview_light_background"
                        android:id="@+id/ed_attach_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="数量"
                        android:text=""
                        android:inputType="textCapCharacters"
                        tools:text="0"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:background="@color/cardview_light_background"
                        android:id="@+id/ed_attach_order_sn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="编号"
                        android:text=""
                        android:inputType="textCapCharacters"
                        tools:text="580120191008003"
                        tools:ignore="HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_attach_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="保存"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/dp_30"
                    android:layout_marginRight="@dimen/dp_30"
                    android:visibility="invisible"
                    app:backgroundTint="@color/color_theme"
                    app:cornerRadius="25dp"
                    android:textColor="@android:color/white"
                    tools:ignore="HardcodedText"></com.google.android.material.button.MaterialButton>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>


